# backend/src/modules/staffRequests/staffRequests.routes.ts
@@ -1,40 +1,45 @@
 import express from "express";
-import * as requestsController from "./requests.controller";
-import * as authController from "../auth/auth.controller";
 import { Role } from "../../generated/prisma";
+import * as authController from "../auth/auth.controller";
+import * as staffRequestsController from "./staffRequests.controller";
 
 const router = express.Router();
 
-router.get("/", authController.protect, authController.restrict(Role.ADMIN), requestsController.getRequests);
+router.get("/", authController.protect, authController.restrict(Role.ADMIN), staffRequestsController.getStaffRequests);
 
-router.get("/:id", authController.protect, authController.restrict(Role.ADMIN), requestsController.getRequestById);
+router.get(
+  "/:id",
+  authController.protect,
+  authController.restrict(Role.ADMIN),
+  staffRequestsController.getStaffRequestById,
+);
 
 router.post(
   "/",
   authController.protect,
   authController.restrict(Role.INSTRUCTOR, Role.ASSISTANT),
-  requestsController.createRequest,
+  staffRequestsController.createStaffRequest,
 );
 
 router.patch(
   "/:id",
   authController.protect,
   authController.restrict(Role.INSTRUCTOR, Role.ASSISTANT),
-  requestsController.updateRequest,
+  staffRequestsController.updateStaffRequest,
 );
 
 router.patch(
   "/:id/answer",
   authController.protect,
   authController.restrict(Role.ADMIN),
-  requestsController.answerRequest,
+  staffRequestsController.answerStaffRequest,
 );
 
 router.delete(
   "/:id",
   authController.protect,
   authController.restrict(Role.INSTRUCTOR, Role.ASSISTANT),
-  requestsController.deleteRequest,
+  staffRequestsController.deleteStaffRequest,
 );
 
 export default router;
